add nested API routers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-rest-mdb"
-version = "0.1.0"
+version = "0.0.0-dev"
 description = ""
 authors = ["Carlos Martin Sanchez <carlosvin@gmail.com>"]
 readme = "README.md"
