--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.79.0"
 uvicorn = {extras = ["standard"], version = "^0.18.2"}
 python-json-logger = "^2.0.4"
 motor = "^3.0.0"
+structlog = "^22.1.0"
 
 [tool.poetry.group.dev.dependencies]
 prospector = {extras=["with_everything"], version="^1.7.7"}
